# GameOfLife

./: Button.cpp  Button.h  CMakeLists.txt  Cell.cpp  Cell.h  Game.cpp  Game.h  main.cpp
assets/: Methuselah386.txt  Pulsar.txt
cmake_modules/: SFMLConfig.cmake
